--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,10 +5,11 @@ html,body {
 }
 #header{
 	background-color: #1565c0;
-	height: 150px;
+	height: 10	0px;
 	color: #ffea00;
 	font-size: 6vmin;
 	text-align: center;
+	top: 0;
 }
 #header img{
 	float: left;
@@ -21,15 +22,46 @@ html,body {
 #menu .nav-wrapper{
 	background-color: #F9BF3B;
 }
-#dropdownClub{
-	width: 200px;
+#dropdownClub a{
+	background-color: #1565c0;
+	color: #ffea00;
+}
+#dropdownClub a:hover{
+	background-color: #F9BF3B;
+	color: #1565c0;
+}#dropdownJoueurs a:hover{
+	background-color: #F9BF3B;
+	color: #1565c0;
 }
 #dropdownJoueurs a{
 	background-color: #1565c0;
 	color: #ffea00;
 }
-
-#dropdownClub a,#dropdownClub li {
-	background-color: #1565c0;
-	color: #ffea00;
+h1{
+	margin: 0;
+	padding: 0;
 }
+
+.titre h1{
+	color: #ffea00;
+	text-align: center;
+	font-size: 3vmin;
+}
+#content{
+}	
+
+/* label focus color */
+.input-field input[type=text]:focus + label {
+	color: #1565c0;
+}
+ /* label underline focus color */
+   .input-field input[type=text]:focus, input-field input[type=email]:focus {
+     border-bottom: 1px solid #1565c0;
+   }
+   /* icon prefix focus color */
+   .input-field .prefix.active {
+     color: #1565c0;
+   }
+   .btn{
+   	margin: 15px;
+   }
