--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,7 @@ html,body {
 #dropdownPages a{
 	background-color: #1565c0;
 	color: #ffea00;
+	z-index: 1;
 }
 #dropdownClub a:hover,
 #dropdownJoueurs a:hover,
@@ -45,7 +46,8 @@ h1{
 	font-size: 3vmin;
 }
 #content{
-	padding: 15px;
+	padding: 40px;
+	z-index: 0;
 }	
 
 /* label focus color */
@@ -83,4 +85,22 @@ h1{
 .deco {
 	background-color: 	white;
 	margin-top: 150px;	
+}
+.haut{
+	margin-top: 40px;
+}
+.article{
+	margin: 40px;
+	padding: 0;
+}
+.titre{
+	margin-top: 40px;
+	font-size: 	3vmin;	
+}
+.titreArticle{
+	font-size: 30px;
+	margin-top: 10px;
+}
+.contenueArticle{
+	font-size: 20px;
 }
