--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,8 +99,13 @@ h1{
 }
 .titreArticle{
 	font-size: 30px;
-	margin-top: 10px;
 }
 .contenueArticle{
-	font-size: 20px;
+	font-size: 12px;
+	overflow: auto;
+}
+
+.contenueArticle h1{
+	font-size: 30px;
+	padding: 15px;
 }
